; ModuleID = '/home/carl/AnghaBench/php-src/ext/intl/collator/extr_collator_class.c_Collator_object_create.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/intl/collator/extr_collator_class.c_Collator_object_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32* }
%struct.TYPE_9__ = type { %struct.TYPE_8__ }

@Collator_handlers = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_8__* @Collator_object_create(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_9__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.TYPE_9__* @zend_object_alloc(i32 8, i32* %4)
  store %struct.TYPE_9__* %5, %struct.TYPE_9__** %3, align 8
  %6 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %7 = call i32 @COLLATOR_ERROR_P(%struct.TYPE_9__* %6)
  %8 = call i32 @intl_error_init(i32 %7)
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @zend_object_std_init(%struct.TYPE_8__* %10, i32* %11)
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %13, i32 0, i32 0
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @object_properties_init(%struct.TYPE_8__* %14, i32* %15)
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 0
  store i32* @Collator_handlers, i32** %19, align 8
  %20 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %20, i32 0, i32 0
  ret %struct.TYPE_8__* %21
}

declare dso_local %struct.TYPE_9__* @zend_object_alloc(i32, i32*) #1

declare dso_local i32 @intl_error_init(i32) #1

declare dso_local i32 @COLLATOR_ERROR_P(%struct.TYPE_9__*) #1

declare dso_local i32 @zend_object_std_init(%struct.TYPE_8__*, i32*) #1

declare dso_local i32 @object_properties_init(%struct.TYPE_8__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
